--- a/app/views/layouts/noodall_admin.html.erb
+++ b/app/views/layouts/noodall_admin.html.erb
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
         </a>
         
-        <a class="brand" href="#"><strong><%= Noodall::UI.app_name %></strong> <%= Noodall::UI.system_name %></a>
+        <a class="brand" href="/admin"><strong><%= Noodall::UI.app_name %></strong> <%= Noodall::UI.system_name %></a>
         
         <div class="nav-collapse">
           <ul class="nav">
