--- a/app/views/noodall/admin/assets/_menu.html.erb
+++ b/app/views/noodall/admin/assets/_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="btn-group pull-right">
   <%= '<a class="action btn btn-success"><i class="icon-ok-sign"></i> Done</a>'.html_safe if params[:mode] == 'multi'  %>
   <%= '<a class="cancel btn btn-danger"><i class="icon-remove-sign"></i> Cancel</a>'.html_safe if params[:mode] %>
-  <%= link_to '<i class="icon-upload"></i> Upload'.html_safe, new_noodall_admin_asset_path(:readonly => readonly), :class => 'upload btn' %>
+  <%= link_to '<i class="icon-upload-alt"></i> Upload'.html_safe, new_noodall_admin_asset_path(:readonly => readonly), :class => 'upload btn' %>
   <%= link_to '<i class="icon-picture"></i> Images'.html_safe, noodall_admin_assets_path(:readonly => readonly), :class => 'images btn' if params[:allowed_types].blank? or params[:allowed_types].include?('images') %>
   <%= link_to '<i class="icon-file"></i> Documents'.html_safe, documents_noodall_admin_assets_path(:readonly => readonly), :class => 'documents btn' if params[:allowed_types].blank? or params[:allowed_types].include?('documents')  %>
   <%= link_to '<i class="icon-film"></i> Videos'.html_safe, videos_noodall_admin_assets_path(:readonly => readonly), :class => 'videos btn' if Asset.video_extensions.any? and (params[:allowed_types].blank? or params[:allowed_types].include?('videos')) %>
