--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -1,183 +1,168 @@
-<h1>Editing Content</h1>
-<p>* Required Fields</p>
+<div class="row-fluid">
+  <div class="span12">
+    <h1>Editing Content</h1>
+    <p>* Required Fields</p>
+  </div> <!-- span12 -->
+</div> <!-- row-fluid -->
+<%= form_for(@node, :as => :node, :url => noodall_admin_node_path(@node), :html => {:method => :put, :id => "node-form", :class => "form-horizontal"}) do |f| %>
 
-<%= form_for(@node, :as => :node, :url => noodall_admin_node_path(@node), :html => {:method => :put, :id => "node-form"}) do |f| %>
-  <%= f.error_messages %>
-
-  <div id="main-form">
-
-    <p>
-      <span class="tooltip" title="Enter a title for this page (used in page headings and titles)">&nbsp;</span>
-      <%= f.label :title, 'Title *' %><br/>
-      <span class="input-wrap"><%= f.text_field :title %></span>
-    </p>
-    <p>
-      <span class="tooltip" title="Enter a name for this page (used in links and navigation, defaults to title)">&nbsp;</span>
-      <%= f.label :name %><br/>
-      <span class="input-wrap"><%= f.text_field :name %></span>
-    </p>
-
-    <%= render :partial => "admin/nodes/#{@node.class.name.underscore}", :locals => { :f => f }  %>
-
-    <p>
-      <span class="tooltip" title="Enter a short summary of this content.">&nbsp;</span>
-      <%= f.label :description, "Short Description" %><br/>
-      <span class="input-wrap"><%= f.text_area :description, :class => 'description' %></span>
-    </p>
-
-    <p>
-      <span class="tooltip" title="Enter a comma separated list of keywords (e.g: one, two, three) or choose from the popular keywords to best describe this content">&nbsp;</span>
-      <%= f.label :keywords, "Keywords" %><br/>
-      <span class="input-wrap">
-        <%= f.text_field :keywords, :class => "keywords-completer" %><br/>
-        <span class="tags"><strong>Popular Keywords: </strong><%= popular_tags %></span>
-      </span>
-    </p>
-
-  </div>
-
-  <div class="fixed-form">
-    <div id="buttons">
-      <%= f.submit 'Publish', :title => "Save and put live", :class => 'publish', :id => "publish", :name => 'node[publish]' if can_publish?(@node) %>
-      <%= f.submit 'Draft', :title => "Save this to edit later", :name => "draft", :class => 'draft' %>
-      <%= link_to 'Versions', noodall_admin_node_versions_path(@node), :title => "View document history", :id => "versions-button" %>
-      <%= f.submit 'Hide', :title => "Temporarily hide this page", :name => 'node[hide]', :id => 'hide' %>
-      <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
-    </div>
-
-    <% if can_publish?(@node) %>
-      <!-- Advanced Publishing Options -->
-      <div class="show-advanced">
-        <fieldset>
-          <legend class="advanced">Advanced</legend>
-          <div id="advanced">
-
-             <div class="published-section advanced-block">
-                  <p class="published">
-                     <%= f.label :published_at, "Publish at" %><br/>
-                     <span class="input-wrap"><%= f.datetime_select :published_at, :include_blank => true  %></span>
-                   </p>
-
-                   <p class="published">
-                     <%= f.label :published_to, "Publish until" %><br/>
-                     <%
-                       # Remove select for far future dates
-                     @node.published_to = nil unless @node.published_to.nil? or @node.published_to < 5.years.from_now
-                   %>
-                 <span class="input-wrap"><%= f.datetime_select :published_to, :include_blank => true %></span>
-               </p>
-
-               <div class="version_message_section advanced-block">
-                 <p>
-                   <%= f.label :version_message %><br />
-                   <span class="input-wrap"><%= f.text_field :version_message -%></span>
-                 </p>
-               </div>
-
-            </div>
-
-                <% if current_user.admin? -%>
-                <div class="permissions-section advanced-block">
-                   <fieldset>
-                     <span class="tooltip" title="If you have created different permission groups for users, you can assign different actions for these users based on their roles. Fill out below to determine which roles can perform certain tasks.">&nbsp;</span>
-                     <legend>User Permission</legend>
-                     <span class="input-wrap">
-                       <table>
-                         <thead>
-                           <tr>
-                             <th width="85">Action</th>
-                             <th width="90%">Groups</th>
-                           </tr>
-                         </thead>
-                         <tbody>
-                           <tr>
-                             <th><%= f.label :updatable_groups_list, "Update" %></th>
-                             <td><%= f.text_field :updatable_groups_list, :class => "groups-completer" %></td>
-                           </tr>
-                           <tr>
-                             <th><%= f.label :publishable_groups_list, "Publish" %></th>
-                             <td><%= f.text_field :publishable_groups_list, :class => "groups-completer" %></td>
-                           </tr>
-                           <tr>
-                             <th><%= f.label :destroyable_groups_list, "Delete" %></th>
-                             <td><%= f.text_field :destroyable_groups_list, :class => "groups-completer" %></td>
-                           </tr>
-                           <tr>
-                             <th><%= f.label :viewable_groups_list, "View" %></th>
-                             <td><%= f.text_field :viewable_groups_list, :class => "groups-completer" %></td>
-                           </tr>
-                         </tbody>
-                       </table>
-                     </span>
-                   </fieldset>
-                   </div>
-                 <% end -%>
-
-
-
-
-        <div class="position-section advanced-block">
-          <% unless @node.in_site_map? %>
-            <p>
-              <span class="node-mover">Parent Content</span>
-              <span class="input-wrap" id="parent-title">
-                <%= @node.root? ? "Root" : @node.parent.title %>
-                <a href="#" class="edit-item">Edit</a>
-              </span>
-              <%= f.hidden_field :parent, :value => @node.parent_id %>
-              <%= hidden_field_tag :parent_types, @node.class.parent_classes.join(','), :disabled => true %>
-            </p>
-
-            <!-- PAGE URL -->
-            <p>
-              <span class="tooltip" title="You can leave as default value shown or if you want to create a custom URL for this page do not include a forward slash at the beginning of the URL."> &nbsp; </span>
-              <%= f.label :permalink, 'Page Url' %><br/>
-              <span class="input-wrap"><%= f.text_field :permalink %></span>
-            </p>
-          <% end %>
-          <!-- BROWSER TITLE -->
-          <p>
-            <span class="tooltip" title="This is normally the title shown at the very top of your browser window."> &nbsp; </span>
-            <%= f.label :browser_title, 'Browser Title' %><br/>
-            <span class="input-wrap"><%= f.text_field :browser_title %></span>
-          </p>
-        </div>
-
+<div class="row-fluid">
+  <div class="span8">
+    
+      <%= f.error_messages %>
+      
+      <div class="control-group">
+        <%= f.label :title, 'Title *', :class => "control-label" %>
+        <i class="icon-info-sign pull-right icon-large help" title="Title" data-content="Enter a title for this page (used in page headings and titles)"></i>
+        <div class="controls"><%= f.text_field :title, :class => "span6" %></div>
       </div>
-    </fieldset>
-  </div>
-<% end -%>
-  </div>
+      
+      <div class="control-group">
+        <%= f.label :name, :class => "control-label" %>
+        <i class="icon-info-sign pull-right icon-large help" title="Name" data-content="Enter a name for this page (used in links and navigation, defaults to title)"></i>
+        <div class="controls"><%= f.text_field :name, :class => "span6" %></div>
+      </div>
+      
+      <%= render :partial => "admin/nodes/#{@node.class.name.underscore}", :locals => { :f => f }  %>
+      
+      <div class="control-group">
+        <%= f.label :description, :class => "control-label" %>
+        <i class="icon-info-sign pull-right icon-large help" title="Description" data-content="Enter a short summary of this content."></i>
+        <div class="controls"><%= f.text_field :description, :class => "span6" %></div>
+      </div>
 
-  <% unless @node.class.slots_count == 0 %>
-    <div id="sub-form">
-
-      <h2>Page Components</h2>
-
-      <span class="tooltip" title="Please choose where you would like to place each component">&nbsp;</span>
-
-      <%= yield :component_table %>
-
-      <% if can_change_templates?(@node) %>
-        <%= link_to "Change Template", change_template_noodall_admin_node_path(@node), :class => 'change' %>
+      <div class="control-group">
+        <%= f.label :keywords, "Keywords", :class => "control-label" %>
+        <i class="icon-info-sign pull-right icon-large help" title="Keywords" data-content="Enter a comma separated list of keywords (e.g: one, two, three) or choose from the popular keywords to best describe this content."></i>
+        <div class="controls">
+          <%= f.text_field :keywords, :class => "span6 keywords-completer" %>
+           <p class="help-block"><strong>Popular Keywords: </strong><%= popular_tags %></p>
+        </div>
+      </div>
+      
+      <div class="form-actions">
+        <%= f.submit 'Publish', :title => "Save and put live", :class => 'btn btn-success btn-large publish', :id => "publish", :name => 'node[publish]' if can_publish?(@node) %>
+        <%= f.submit 'Draft', :title => "Save this to edit later", :name => "draft", :class => 'btn  btn-large draft' %>
+        <%= link_to 'Versions', noodall_admin_node_versions_path(@node), :title => "View document history", :id => "versions-button", :class => "btn btn-large" %>
+        <%= f.submit 'Hide', :title => "Temporarily hide this page", :name => 'node[hide]', :id => 'hide', :class => "btn btn-large" %>
+        <a class="btn btn-large" data-toggle="collapse" data-target="#advanced-options">Advance Options <i class="icon-chevron-down"></i></a>
+        <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'btn btn-danger btn-large cancel'  %>      
+        
+        <div class="row-fluid collapse in" id="advanced-options">
+          
+          <% if can_publish?(@node) %>
+            
+            <h2>Publishing Options</h2>
+            
+            <div class="control-group">
+              <%= f.label :published_at, "Publish at", :class => "control-label" %>
+              <div class="controls"><%= f.datetime_select :published_at, {:include_blank => true}, {:class => "span1"} %></div>
+            </div>
+            
+            <div class="control-group">
+              <%= f.label :published_to, "Publish until", :class => "control-label" %>
+              <% @node.published_to = nil unless @node.published_to.nil? or @node.published_to < 5.years.from_now %>
+              <div class="controls"><%= f.datetime_select :published_to, {:include_blank => true}, {:class => "span1"} %></div>
+            </div>
+            
+           <div class="control-group">
+              <%= f.label :version_message, :class => "control-label" %>
+             <div class="controls"><%= f.text_field :version_message -%></div>
+           </div>
+            
+            <% if current_user.admin? -%>
+              <h2>User Permissions</h2>
+              <i class="icon-info-sign icon-large help pull-right" title="User Permisions" data-content="If you have created different permission groups for users, you can assign different actions for these users based on their roles. Fill out below to determine which roles can perform certain tasks."></i>
+              
+              <div class="control-group">
+                <%= f.label :updatable_groups_list, "Update", :class => "control-label" %>
+                <div class="controls"><%= f.text_field :updatable_groups_list, :class => "groups-completer" %></div>
+              </div>
+              
+              <div class="control-group">
+                <%= f.label :publishable_groups_list, "Publish", :class => "control-label"  %>
+                <div class="controls"><%= f.text_field :publishable_groups_list, :class => "groups-completer" %></div>
+              </div>
+              
+              <div class="control-group">
+                <%= f.label :destroyable_groups_list, "Delete", :class => "control-label"  %>
+                <div class="controls"><%= f.text_field :destroyable_groups_list, :class => "groups-completer" %></div>
+              </div>
+              
+              <div class="control-group">
+                <%= f.label :viewable_groups_list, "View", :class => "control-label"  %>
+                <div class="controls"><%= f.text_field :viewable_groups_list, :class => "groups-completer" %></div>
+              </div>
+              
+            <% end -%>
+            
+            <h2>Page Options</h2>
+            
+            <% unless @node.in_site_map? %>
+                
+                <div class="control-group">
+                  <p class="control-label">Parent Content</p>
+                  <div class="controls"><%= @node.root? ? "Root" : @node.parent.title %> <a href="#" class="edit-item btn btn-warning">Edit</a></div>
+                </div>
+                
+                
+                <%= f.hidden_field :parent, :value => @node.parent_id %>
+                <%= hidden_field_tag :parent_types, @node.class.parent_classes.join(','), :disabled => true %>
+                
+                <div class="control-group">
+                  <%= f.label :permalink, 'Page Url', :class => "control-label"  %>
+                  <i class="icon-info-sign icon-large help pull-right" title="Page URL" data-content="You can leave as default value shown or if you want to create a custom URL for this page do not include a forward slash at the beginning of the URL."></i>
+                  <div class="controls"><%= f.text_field :permalink %></div>
+                </div>
+                
+            <% end %>
+            
+            <div class="control-group">
+              <%= f.label :browser_title, 'Browser Title', :class => "control-label"  %>
+              <i class="icon-info-sign icon-large help pull-right" title="Browser Title" data-content="This is normally the title shown at the very top of your browser window."></i>
+              <div class="controls"><%= f.text_field :browser_title %></div>
+            </div>
+   
       <% end -%>
+    </div><!-- advanced-options -->
+    </div><!-- form-action -->
+  
+    
+  </div> <!-- span8 -->
+  
+  <div class="span4">
+    <% unless @node.class.slots_count == 0 %>
+      <h3>Page Components</h3>
+      <i class="icon-info-sign icon-large help left pull-right" title="Page Components" data-content="Please choose where you would like to place each component." data-placement="left"></i>
+      
+        <div class="component-table-well well"><%= yield :component_table %></div>
 
-      <div id="modules-list">
-        <!-- Component lightbox related stuff -->
-        <ol id="slot-list">
+        <% if can_change_templates?(@node) %>
+          <%= link_to "Change Template", change_template_noodall_admin_node_path(@node), :class => 'btn btn-large' %>
+        <% end -%>
+        
+        <table class="table table-striped table-bordered table-condensed component-list">
+          
           <%
             Noodall::Component.possible_slots.each do |type|
               @node.class.send("#{type}_slots_count").to_i.times do |index| %>
-              <li>
-                <%= slot_link(@node,type,index) %>
-                <%= slot_form(@node,type,index) %>
-              </li>
+              <tr>
+                <td><%= slot_link(@node,type,index) %></td>
+                <td><%= slot_span(@node,type,index) %></td>
+                
+                <td><%#= slot_form(@node,type,index) %>mystery content</td>
+              </tr>
             <% end -%>
           <% end -%>
-        </ol>
-      </div>
+          
+          
+        </table>
 
-    </div>
-  <% end -%>
+    <% end -%>
 
+
+
+  </div> <!-- span4 -->
+  
+</div> <!-- row-fluid -->
 <% end %>
