--- a/app/views/noodall/admin/assets/index.html.erb
+++ b/app/views/noodall/admin/assets/index.html.erb
@@ -46,7 +46,7 @@
     
     <div class="btn-group pull-right">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-        View per Page
+        View per page
         <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
