--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,7 +1,21 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "font-awesome";
-/* Style.css */
+
+/* =============================================================================
+  BOOTSTRAP COMPATIBILITY
+========================================================================== */
+/* Rails scaffold style compatibility */
+.errorExplanation {
+  @extend .alert;
+  @extend .alert-error;
+  @extend .alert-block; /* optional */
+}
+
+.field_with_errors {
+  @extend .control-group.error
+}
+
 /* =============================================================================
   LAYOUT
 ========================================================================== */
